fix: align mobile slideout logout control

--- a/frontend/src/components/common/AuthNavItem.module.scss
+++ b/frontend/src/components/common/AuthNavItem.module.scss
@@ -22,6 +22,14 @@
     }
   }
 
+  .logoutControlMobile {
+    height: 100%;
+    margin-inline: 0;
+    align-self: stretch;
+    justify-content: center;
+    mask-position: left center;
+  }
+
   .logoutControlError {
     width: auto;
     padding-left: initial;
